syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";


option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Multiply Service";
    version: "1.0";
    contact: {
      name: "go-grpc-multiply project";
      url: "https://github.com/samuskitchen/go-grpc-multiply";
      email: "daniel.samkit@gmail.com";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "404";
    value: {
      description: "Returned when the resource does not exist.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};

message NumbersRequest {
  string api = 1;
  float number1 = 2;
  float number2 = 3;
}

message NumberResponse {
  string api = 1;
  float number1 = 2;
}

service MultiplyService{

  rpc MultiplyNumbers(NumbersRequest) returns (NumberResponse) {
    option (google.api.http) = {
      post: "/v1/multiply"
      body: "*"
    };
  }

}